--- a/packages/indexp.html
+++ b/packages/indexp.html
@@ -11,7 +11,7 @@
 
   
   <link rel="stylesheet" href="../temp/styles/styles.css">
-  <link rel="stylesheet" href="packages.css">
+  <link rel="stylesheet" href="_packages.css">
 
 </head>
 
@@ -53,7 +53,7 @@
                   <a href="../customers/indexc.html">Thanos' Fleet</a>
               </li>
               <li class="main-nav__item main-nav__item--cta">
-                  <a href="../start-hosting/indexh.html">Start Hosting</a>
+                  <a href="../start-hosting/indexh.html">Join the Avengers!</a>
               </li>
           </ul>
          </nav>
@@ -68,7 +68,7 @@
                         <a href="../customers/indexc.html">Thanos' fleet</a>
                     </li>
                     <li class="mobile-nav__item mobile-nav__item--cta">
-                        <a href="../start-hosting/indexh.html">Start Hosting</a>
+                        <a href="../start-hosting/indexh.html">Join the Avengers!</a>
                     </li>
                 </ul>
             </nav>
@@ -86,6 +86,7 @@
               <h2 class="package__subtitle">The most popular choice of our customers.</h2>
               <p class="package__info">Benefit from increased storage and faster support to ensure that your mission-critical data and applications
                   are always available!</p>
+                  <iframe class="trailer" width="500" height="300" src="https://www.youtube.com/embed/TcMBFSGVi1c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </a>
       </section>
       <section class="package" id="free">
@@ -96,6 +97,7 @@
               <h1 class="package__title">Our FREE Plan</h1>
               <h2 class="package__subtitle">An extremely solid start into our hosting world.</h2>
               <p class="package__info">Get started immediately at zero cost!</p>
+              <iframe class="trailer" width="500" height="300" src="https://www.youtube.com/embed/SoQCcA93DQQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </a>
       </section>
       <div class="clearfix"></div>
@@ -107,6 +109,7 @@
               <h1 class="package__title">Our PREMIUM Plan</h1>
               <h2 class="package__subtitle">All your enterprise needs. Instant support, guaranteed uptime. </h2>
               <p class="package__info">The best solution for small to large enterprises. Because hosting shouldn't be in the way!</p>
+              <iframe class="trailer" width="500" height="300" src="https://www.youtube.com/embed/ziVTsSfLo5E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </a>
         
       </section>
@@ -116,8 +119,8 @@
 
 
   <footer class="footer">
-    <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#" class="btn-orange">Join the Avengers</a></p>
+    <p>Copyright &copy; Marvel 2019. All rights reserved. <a href="../start-hosting/indexh.html" class="btn-orange">Join the Avengers</a></p>
   </footer>
-  <script type="text/javascript" src="scripts/script.js"></script>
+  <script type="text/javascript" src="../scripts/script.js"></script>
 </body>
 </html>
