--- a/start-hosting/indexh.html
+++ b/start-hosting/indexh.html
@@ -45,7 +45,7 @@
                     <a href="../customers/indexc.html">Thanos' Fleet</a>
                 </li>
                 <li class="main-nav__item main-nav__item--cta">
-                    <a href="start-hosting/indexh.html">Start Hosting</a>
+                    <a href="#">Join the Avengers!</a>
                 </li>
             </ul>
            </nav>
@@ -60,7 +60,7 @@
                         <a href="../customers/indexc.html">Thanos' fleet</a>
                     </li>
                     <li class="mobile-nav__item mobile-nav__item--cta">
-                        <a href="start-hosting/indexh.html">Start Hosting????????????</a>
+                        <a href="#">Join the Avengers!</a>
                     </li>
                 </ul>
             </nav>
@@ -107,7 +107,7 @@
             </ul>
         </nav>
     </footer>
-    <script type="text/javascript" src="scripts/script.js"></script>
+    <script type="text/javascript" src="../scripts/script.js"></script>
 </body>
 
 </html>
